--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,8 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  margin: 0 auto; 
-  padding: 0 20px; 
-  font-family: "Arial", sans-serif;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
@@ -14,15 +13,15 @@
   height: 100vh;
   min-height: 720px;
   max-height: 800px;
-  padding: 1px;
+  padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
 }
 
 .nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav__logo {
@@ -42,8 +41,6 @@
   color: #000000;
   text-decoration: none;
   font-weight: bold;
-  gap: 20px;
-  padding: 0; 
 }
 
 .header__content {
@@ -60,11 +57,10 @@
 }
 
 .header__description {
-  max-width: 515px;
   font-size: 20px;
-  color: #000000;
-  line-height: 30px; 
-  margin-top: 32px; 
+  line-height: 30px;
+  max-width: 515px;
+  margin-top: 32px;
 }
 
 .header__image {
@@ -94,11 +90,82 @@
   color: #838383;
 }
 
+.staff {
+  background-image: url(../images/staff_picks_background.jpg);
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  /*padding-top:100px;
+  padding-bottom: 0cap;
+    */
+  padding: 100px 0 140px;
+}
+.staff__cards {
+  max-width: 760px;
+  /*margin: 68px;*/
+  margin-top: 68px;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px 40px;
+  list-style-type: none;
+  padding-left: 0;
+}
+.card {
+  width: 360px;
+  height: 420px;
+  /*margin-bottom: 40px;
+  margin-right: 40px;
+  */
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 32px 40px 20px 32px;
+  box-sizing: border-box;
+
+  gap: 40px 40px;
+}
+
+.card__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* margin: 0 auto;*/
+}
+
+.card__title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  /*font-weight:bold ;*/
+  margin: 0;
+}
+
+.card__text {
+  margin: 20px 0 0;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.card__footer {
+  font-size: 14px;
+  line-height: 20px;
+  color: #838383;
+  margin-top: auto;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .staff__title {
   text-align: center;
   font-size: 44px;
-  line-height: 52px;
   font-weight: 400;
+  line-height: 52px;
   margin: 0 0 24px;
   color: #ffffff;
 }
@@ -112,69 +179,7 @@
   color: #ffffff;
 }
 
-.staff {
-  background-image: url("../images/staff_picks_background.jpg");
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-  padding-top: 100px;
-  padding: 100px 0 140px;
-}
-.staff__cards {
-  max-width: 760px;
-  margin-top: 68px;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 40px 40px;
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.card {
-  background-color: #fff;
-  border-radius: 6px;
-  padding: 32px 40px 20px 32px;
-  box-sizing: border-box;
-  width: 360px;
-  height: 420px;
-}
-
-.card__content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.card__title {
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.card__text {
-  margin: 20px 0 0;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.card__footer {
-  margin-top: auto;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-  font-size: 14px;
-  line-height: 20px;
-  color: #838383;
-}
-
-
-
+/*********** Events section *********************************/
 .events {
   padding: 100px 0 120px 80px;
   display: flex;
@@ -182,6 +187,7 @@
   justify-content: space-between;
   box-sizing: border-box;
   background-color: #f2f2f2;
+  color: #000000;
 }
 
 .events__content {
@@ -242,13 +248,13 @@
   flex-shrink: 0;
   flex-basis: 780px;
   max-width: 780px;
-  position: relative; 
+  position: relative;
 }
 
 .events__image {
   max-width: 100%;
 }
-
+/*********** Person section *********************************/
 .person {
   position: absolute;
   display: flex;
@@ -258,26 +264,31 @@
 }
 
 .person_name_feynman {
+  /* Use os valores corretos das propriedades top/right/bottom/left para posicionar o elemento */
   top: -30px;
-  left: 319px; 
+  left: 319px;
 }
 
 .person_name_burbidge {
+  /* Use os valores corretos das propriedades top/right/bottom/left para posicionar o elemento */
   top: 96px;
   right: 125px;
 }
 
 .person_name_cannon {
+  /* Use os valores corretos das propriedades top/right/bottom/left para posicionar o elemento */
   right: 216px;
   bottom: 18px;
 }
 
 .person_name_mitchell {
+  /* Use os valores corretos das propriedades top/right/bottom/left para posicionar o elemento */
   left: 142px;
   bottom: 82px;
 }
 
 .person_name_tarter {
+  /* Use os valores corretos das propriedades top/right/bottom/left para posicionar o elemento */
   top: 79px;
   left: 159px;
 }
@@ -295,11 +306,128 @@
 }
 
 .person__image_size_s {
-   width: 80px;
+  width: 80px;
 }
 
 .person__caption {
   text-align: center;
   font-size: 14px;
   margin: 0;
+}
+/*********** Membership section *********************************/
+.membership {
+  padding: 100px 0 140px;
+  background-color: #057bf2;
+  color: #ffffff;
+}
+
+.membership__title {
+  max-width: 574px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+}
+
+.membership__steps {
+  list-style-type: none;
+  padding: 0;
+  margin: 100px 0 0;
+  display: flex;
+  justify-content: center;
+  column-gap: 40px;
+}
+
+.step {
+  /* Adicione estilos */
+
+  padding-right: 40px;
+  flex-basis: 220px;
+}
+
+.step__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.step__icon {
+  margin-left: 20px;
+}
+
+.step__description {
+  margin: 10px 0 0;
+}
+/*********************************************************/
+.footer {
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  color: #ffffff;
+  padding: 60px 80px 60px 80px;
+}
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.footer__column {
+  flex-direction: column;
+}
+
+.footer__column_content_hours {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.footer__column_content_social {
+  margin-left: 80px;
+  margin-right: 0;
+}
+
+.footer__logo {
+  width: 58px;
+  height: 80px;
+}
+
+.footer__column-heading {
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  /* O código abaixo remove os estilos do navegador padrão para listas */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  flex-direction: column;
+}
+
+.footer__list-item {
+  margin-bottom: 16px;
+}
+
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.footer__copyright {
+  margin-top: 100px;
 }
